# PyslopeX

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_usage.py
pyslopex/: __init__.py  loads.py  material.py  planar.py  plotting.py  polyline.py  slope.py  utils.py
tests/: test_planar.py  test_polyline.py
