[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pyslopex"
version = "0.1.0"
description = "Slope stability analysis using planar and polyline sliding methods"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.setuptools.packages.find]
include = ["pyslopex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
